# backup_auto_dock_sim_neo

./: README.md
auto_dock_sim_ws/: output.txt  pendulum_demo_results
auto_dock_sim_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
auto_dock_sim_ws/log/: latest_build
auto_dock_sim_ws/src/: .~lock.doc_launch_sim.odt#  doc_launch_sim.odt
auto_dock_sim_ws/src/auto_dock_sim_py_pkg/: setup.cfg  setup.py
auto_dock_sim_ws/src/auto_dock_sim_py_pkg/auto_dock_sim_py_pkg/: 01_pub.py  01_sub.py  my_node.py  pub_data.py  st_check_goal.py  st_move copy.py  st_move.py  st_scan.py  st_scan_set_blue  st_scan_show_plot.py  st_scan_vertex.py  test.py  test_time_pub.py
auto_dock_sim_ws/src/data_real_lidar/liadr_test_data_01-02-66/: data_01.xls  data_02.xls  data_03.xls  data_04.xls  data_05.xls  data_06.xls  data_07.xls  data_08.xls  data_09.xls  data_10.xls  data_100.xls  data_101.xls  data_102.xls  data_103.xls  data_104.xls  data_105.xls  data_106.xls  data_107.xls  data_108.xls  data_109.xls  data_11.xls  data_110.xls  data_111.xls  data_112.xls  data_113.xls  data_114.xls  data_115.xls  data_116.xls  data_117.xls  data_118.xls  data_119.xls  data_12.xls  data_120.xls  data_121.xls  data_122.xls  data_123.xls  data_124.xls  data_125.xls  (+322 more)
auto_dock_sim_ws/src/learning_tf2_py/: package.xml  setup.py
auto_dock_sim_ws/src/scripts_test_analys_data/: GPT_test.py  call_data_DBSCAN.py  call_data_label_lidar.py  call_data_mean.py  icp_ml_knn_error.py  icp_open3d.py  test_db.py  test_db_2.py  test_plot_rot_tran.py  test_rot_tran_point_line.py  test_rt_plot.py
(+196 files in other folders)
